upgrade to vertx 5.0.6, libs and jdk 25