@@ -1,4 +1,4 @@
-FROM maven:3.9.9-eclipse-temurin-21 as maven
+FROM maven:3.9.12-eclipse-temurin-25 as maven
 
 WORKDIR /src
 
@@ -8,23 +8,23 @@ RUN /opt/java/openjdk/bin/jlink \
   --no-header-files \
   --no-man-pages \
   --add-modules java.base,java.naming,java.management,java.logging,java.sql,java.xml,java.compiler,jdk.naming.dns,jdk.unsupported \
-  --compress 2 \
-  --output /opt/java/openjdk-21-slim
+  --compress zip-6 \
+  --output /opt/java/openjdk-25-slim
 
 FROM ubuntu:jammy
 
-ENV JAVA_HOME /usr/local/openjdk-21
+ENV JAVA_HOME /usr/local/openjdk-25
 ENV PATH $JAVA_HOME/bin:$PATH
 ENV LANG C.UTF-8
 
 WORKDIR /opt
 
 COPY --from=maven --chown=nobody:nogroup /src/src/docker/* /src/target/nassh-relay-app.jar /opt/
-COPY --from=maven /opt/java/openjdk-21-slim /usr/local/openjdk-21
+COPY --from=maven /opt/java/openjdk-25-slim /usr/local/openjdk-25
 
 USER nobody
 
-ENTRYPOINT ["java", "-jar", "nassh-relay-app.jar" ]
+ENTRYPOINT ["java", "--enable-native-access=ALL-UNNAMED", "-jar", "nassh-relay-app.jar" ]
 
 CMD ["-conf", "config.json"]
 
